need to fix transition on mobile and next sections

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -1,31 +1,30 @@
 .grid {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto 1fr auto;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto 1fr auto;
 }
 
 .header {
-    grid-row: 1;
-    grid-column: 1 / 4;
+  grid-row: 1;
+  grid-column: 1 / 4;
 }
 
 .content {
-    grid-row: 2;
-    grid-column: 2 / 3;
-    margin-top: 80px;
+  grid-row: 2;
+  grid-column: 2 / 3;
 }
 
 .footer {
-    background-color: green;
-    grid-row: 3;
-    grid-column: 1 / 4;
+  background-color: green;
+  grid-row: 3;
+  grid-column: 1 / 4;
 }
 
 .content,
 .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
 }
